--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "@pcd/email-pcd": "^0.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,17 +12,29 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "lucide-react": "^0.291.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jss": "^10.10.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "snarkjs": "^0.7.2",
+    "stream": "^0.0.2",
     "typescript": "^4.4.2",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "PORT=3004 craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +53,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@pcd/pcd-types": "^0.8.0",
+    "@types/circomlibjs": "^0.1.6",
+    "@types/json-bigint": "^1.0.4",
+    "@types/lodash": "^4.14.201",
+    "@types/pako": "^2.0.3",
+    "@types/qr-image": "^3.2.9",
+    "@types/react-modal": "^3.16.2",
+    "@types/snarkjs": "^0.7.6",
+    "@types/styled-components": "^5.1.30",
+    "@types/uuid": "^9.0.7"
   }
 }
