--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-jss": "^10.10.0",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "snarkjs": "^0.7.2",
     "stream": "^0.0.2",
