--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "lucide-react": "^0.291.0",
+    "pako": "^2.1.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
