--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_URL=http://localhost:8000
+REACT_APP_ZUPASS_URL=http://localhost:3000/
+REACT_APP_ZUPASS_REDIRECT_URL=http://localhost:3001
